changes made, updated the sidebar and appbar

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,7 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "app/not-found.jsx"
+    "app/not-found.tsx"
   ],
   "exclude": ["node_modules"]
 }
