base drag and drop for image storage

--- a/package.json
+++ b/package.json
@@ -35,7 +35,10 @@
     "next": "^15.1.4",
     "next-mdx-remote": "^5.0.0",
     "react": "^19.0.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.0.0",
+    "react-dropzone": "^14.3.5",
     "react-instantsearch": "^7.15.3",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-slug": "^6.0.0",
